main/css/styles.css
/* theme "Knet" */
:root {
    --clr-main: #fafcaf;
    --clr-grad2: rgba(104,20,104,.3);
    --clr-icon: var(--clr-main);
    --clr-menu-text: var(--clr-main); 
    --clr-400: #cecece;
    --clr-500: #bbb;
    --clr-600: #aaa;
    --clr-700: #999;
    --logo-filter: none;
}

/*
    these are just in case we need to revert
    --clr-400: #feffb5;
    --clr-500: #fdff80;
    --clr-600: #fbfd75;
    --clr-700: #fdff6f;
*/

body[data-theme="Classic"] {
    --clr-main: #7d0101;
    --clr-grad2: rgba(39,3,4,.5);
    --clr-icon: #bd2c22;
    --clr-menu-text: #bd2c22;
    --clr-400: #ff9393;
    --clr-500: #C06E7A;
    --clr-600: #eb9999;
    --clr-700: #bd2c22;
    --logo-filter: hue-rotate(90deg);
}

body[data-theme="Vishnan"] {
    --clr-main: #EB901B;
    --clr-grad2: rgba(104,96,20,.3);
    --clr-icon: var(--clr-main);
    --clr-menu-text: var(--clr-main);
    --clr-400: #FFE193;
    --clr-500: #C0A16E;
    --clr-600: #EB901B;
    --clr-700: #BD7422;
    --logo-filter: sepia(50%) hue-rotate(120deg) brightness(200%);
}

body[data-theme="Ancients"] {
    --clr-main: #1B46EB;
    --clr-grad2: rgba(20,20,104,.3);
    --clr-icon: var(--clr-main);
    --clr-menu-text: #6E7AC0;
    --clr-400: #93A6FF;
    --clr-500: #6E7AC0;
    --clr-600: #1B46EB;
    --clr-700: #2224BD;
    --logo-filter: hue-rotate(310deg) brightness(150%);
}

body[data-theme="Nightmare"] {
    --clr-main: #1BEB24;
    --clr-grad2: rgba(20,104,20,.3);
    --clr-icon: var(--clr-main);
    --clr-menu-text: var(--clr-main);
    --clr-400: #99FF93;
    --clr-500: #73C06E;
    --clr-600: #1BEB24;
    --clr-700: #2BBD22;
    --logo-filter: hue-rotate(220deg) brightness(150%);
}

body[data-theme="Ae"] {
    --clr-main: #B3B3B3;
    --clr-grad2: rgba(104,20,104,.3);
    --clr-icon: #8423c5;
    --clr-menu-text: var(--clr-main);
    --clr-400: #E8E8E8;
    --clr-500: #CECECE;
    --clr-600: #B3B3B3;
    --clr-700: #8C8C8C;
    --logo-filter: none;
}

#webpageIcon {
    filter: var(--logo-filter);
}

header {
    padding-bottom: 20px;
    margin-right: 0px;
    margin-bottom: 0px;
}

.container {
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 40px;
    padding-right: 10px;
}

.header-container {
    margin-top: 0px;
    margin-left: 0px;
    margin-right: 0px;
    padding-top: 0px;
    padding-left: 0px;
    padding-bottom: 0px;
    padding-right: 0px;
}

.item-body{
    background-color: #333333;
    margin: 0px;
    margin-top: 20px;
    margin-right: 15px;
    padding: 15px;
    padding-top: 20px;
    border-radius: 5px;
}

.account-item-body {
    background-color: #333333;
    margin: 0px;
    margin-top: 10px;
    margin-left: 30px;
    margin-right: 50px;
    padding: 15px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-radius: 5px;
}

body {
    overflow-x: hidden;
    background-color: #000;
    background-image: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.4) 35%, rgba(30,30,30,0) 100%), url("../res/GanymedeBanner.png");
    /*background-image: ;*/
    background-repeat: no-repeat;
    background-position: right 50% top;
    margin-right: 0px;
    padding-right: 0px;
}

.the-navbar {
    opacity: 0.93;
}

.navbar-nav > li{
    padding-left:30px;
    padding-right:30px;
}

a {
    color: var(--clr-400);
    font-weight: normal;
    text-shadow: 0 0 3px #000;
}

.local-link .minor-text{
    color: var(--clr-600);
}

a:hover {
    color: var(--clr-700);
    cursor: pointer;
}

h2 {
    text-shadow: 0 0 12px #000;
    font-weight: normal;
}

h3, h4, h5 {
    text-shadow: 0 0 12px #000;

}

h1, h2, h3, h4, h5, .minor-text {
    color: var(--clr-400);
}

h3 { 
    font-size: larger;
}

h4 {
    font-size:large;
}

h5 {
    font-size: medium;
}

.modal-header {
    background-color: #404040;
    border-bottom: #252525;
}

.modal-body {
    background-color: #242424;
    outline-color: #242424;
}

.modal-footer {
    background-color: #242424;
    border-top: #242424;
}

.form-group {
    padding-left: 25px;
    padding-right: 30px;
}

.modal {
    color:#CECECE;
}

.errorResponse{
    display: flex; 
    justify-content: center; 
    color:crimson;
    padding-bottom: 10px;
    font-weight: bold;
}

.minor-text {
    font-size: smaller;
}

.semi-hidden-text {
    font-size:xx-small
}

.lower-navbar {
    padding: 0px;
    padding-left: 40px;
    margin: 0px;
    position: sticky; 
    top: 4000; 
    left: 0; 
    z-index: 11;
}

.footer-area{
    margin: 0px;
    padding-bottom: 0px;
    position: sticky; 
    top: 5000; 
    z-index: 10;
}

/*.row-content {
    border-bottom: 1px ridge;
    min-height: 400px;
}*/

li {
    list-style-image: "main/res/iconmonstr-download.png";
}

.li-body {
    margin-bottom: 5px;
    padding-left: 10px;
}

/* Adjusts the bottom border of the whole nav-tabs section */
.nav-tabs {
    border-bottom-width: 0px;
    border-left-width: 3px;
    border-right-width: 3px;
    border-color: #000;
}

/* Actually fixes the tab background color*/
.nav-tabs .nav-item .nav-link {

    border-width: 0px;
    border-right-width: 3px;
    border-bottom-width: 3px;
    border-color: #000;
}

.nav-link .navbar-toggler{
    color: var(--clr-400);
}

/* Tab colors on nav bar mouse down */
.nav-tabs:active .nav-item:active .nav-link:active {
    color: var(--clr-500);
    background-color:#242424;
}

.text-area {
    background-color: #242424;
    margin: 0px;
    margin-left: 40px;
    padding: 25px;
    padding-bottom: 20px;
    padding-right: 25px;
    border-radius: 5px;
    max-width: 750px;
} 

.text-data-area{
    background-color: #242424;
    margin: 0px;
    margin-left: 40px;
    padding: 25px;
    padding-bottom: 20px;
    padding-right: 25px;
    border-radius: 5px;
    max-width: 825px;
}

.indented-row {
    margin-left: 30px;
    padding-right: 5px;
    margin-right: 0px;
}

.blurb-body {
    background-color: #333333;
    border-color: #333333;
}

.link-body {
    background-color: #080808;
    margin: 0px;
    padding: 15px;
    padding-bottom: 50px;
    margin-left: 15px;
    border-color: #000;
    border-width: 3px;
    border-radius: 30;
}

.floating-link-container {
    position: fixed;
    z-index:100;
    left:72%;
    top:300px;
    background-color: #1d1d1d;
    min-height: 80%;
    max-height: 80%;
    min-width: 350px;
    max-width: 450px;
    padding-top: 30px;
    border-color: rgb(48, 48, 48);
    border-radius: 5px;
    overflow-x: auto;
    overflow-y: auto;
}

.last-floater-row {
    padding-bottom: 30px;
}

.add-item-button{
    padding-bottom: 10px;
}

.table-edit-ui-button {
    background-color: #ccc;
    border-color: #000000;
/*    border-radius: 0px;
    border-width: 2px;*/
    color: #000000;
    padding-bottom: 5px;
}

.table-edit-ui-button:hover {
    background-color: #333333;
}

.table-edit-ui-button:focus {
    background-color: #333333;
}

.btn-outline-dark:hover {
    color: #000;
    border-color: #343a40;
}

a:not([href]):not([class]):hover{
    color: var(--clr-500);
}

.btn {
    color: var(--clr-500);
}

.btn:hover {
    color: var(--clr-500);
}

.link-container {
    padding: 0px;
    margin: 0px;
}

.dropdown-menu {

    background-color: #252525;
}

.dropdown-item {
    color: var(--clr-500);
}

.dropdown-item:hover {
    color: var(--clr-500);
    background-color: #000;
}

/* Not yet working...*/
.dropdown-divider {
    background-color: #000000;
    border-top: #000000
}

/*. {
    fill: #ffffff;
}*/

.icon-20 {
   --_size: 20px;

}
.icon-16 {
    --_size: 16px;
}

.icon-10 {
    --_size: 10px;
}

svg.icon {
    width: var(--_size, 24px);
    height: var(--_size, 24px);
    fill: var(--clr-main);
}

/* Hides the wepage until it's loaded.*/
#cover {
    position: fixed; height: 100%; width: 100%; top:0; left: 0; background: #000; z-index:9999;
}

.dark-line {
    margin-left: 1.5em;
    margin-right: 1.5em;
    margin-top: 0px;
    margin-bottom: 0px;
    border-top: 3px solid rgb(0, 0, 0);
}

hr {
 background-color: #e0e0e0
}

